# tabel

./: .env.example  .gitignore  CENTRAL_EVENTS_DB.md  CLAUDE.md  DESIGN.md  README.md  README_v0.3.md  ROADMAP.md  _demo_setup.py  _run.py  _test_compute.py  _test_phase4.py  pyproject.toml  report.py  requirements.txt  run.bat  setup.bat  НАСТРОЙКА.md  назначить_отделы.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 3b5bc6ff9e10_initial_schema.py  6d1e49a3ea0c_employee_dismissed_at.py  (+7 more)
api/: __init__.py  config.py  constants.py  db.py  deps.py  holidays_ru.py  main.py  models.py  schemas.py  security.py
api/routers/: absences.py  (+15 more)
engine/: __init__.py  bases.py  calendar.py  compute.py  employees.py  model.py  names.py  pipeline.py  refdata.py  report.py  shifts.py  timeutil.py
legacy/: DateWorker.py  FileEditor.py  SCUD(fixed_time)_v0.2.py  SCUD(fixed_time)_v0.3.py  SCUD.py  _cmp.py  compute.py  refdata.py  назначить_отделы.py
scripts/: seed_from_excel.py  update_month.py
tests/: test_absences.py  test_aliases.py  test_api.py  test_api_phase2.py  test_arrives_by_car.py  test_assign.py  test_calendar.py  test_config_prod.py  test_deviation_codes.py  test_deviations.py  test_employee_stats.py  test_engine_units.py  test_explain.py  test_export_vs_legacy.py  test_golden_vs_legacy.py  test_ingestion_roundtrip.py  test_overtime.py  test_period_close.py  test_pipeline_xlsx.py  test_refdata_from_db.py  test_reference_import.py  test_run_period.py  test_security.py  test_settings.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+45 files in other folders)
