# Конфигурация инструментов разработки. НЕ делает проект устанавливаемым пакетом
# (нет [build-system]/[project]) — только настройки линтера ruff.
#
# Линтуется поддерживаемый код: api, engine, scripts, tests, alembic
# (см. шаг CI / README). Легаси-слой вынесен в legacy/ — замороженный эталон
# регрессий, не линтуется.

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["legacy"]

[tool.ruff.lint]
# Дефолтный набор ruff (E4/E7/E9 + F) — ловит реальные дефекты без стилевого шума.

[tool.ruff.lint.per-file-ignores]
# Тесты/сидер/миграции правят sys.path до импортов — E402 здесь ожидаем.
"tests/**" = ["E402"]
"scripts/**" = ["E402"]
"alembic/**" = ["E402"]
